Removal of old title command

--- a/SupplementalDatasets.tex
+++ b/SupplementalDatasets.tex
@@ -1,5 +1,5 @@
 \clearpage
-\Title{Supplemental Datasets}
+\section*{Supplemental Datasets}
 \noindent
 In this section, we briefly explain the file formatting of the generated and analysed dataset files stored in the \textit{*.csv} format. In total, there are five wild type datasets (\#120830WT.csv, \#121204WT.csv, \#121211WT.csv, \#130508WT.csv, \#130607WT.csv) and the \emph{aurora} mutant (auroraMutant.csv). As already explained in section~\ref{sec:segmentation}, for each cell, we only store the position of the first and the last frame before it divides. In the program, the positions in between are interpolated linearly. All files share the same header information which are explained below:
 
