--- a/SupplementalExperimentalProcedures.tex
+++ b/SupplementalExperimentalProcedures.tex
@@ -6,7 +6,7 @@
 \addto\captionsenglish{\renewcommand{\figurename}{Illustration}}
 \makeatother
 \clearpage
-\Title{Supplemental Experimental Procedures}
+\section*{Supplemental Experimental Procedures}
 \section{Material and Methods}
 \subsection{Reporters, Molecular Biology and Growth Conditions}
 \subsubsection{Reporters}
