--- a/SupplementalFigures.tex
+++ b/SupplementalFigures.tex
@@ -8,7 +8,7 @@
 %\listoffigures
 %\clearpage
 %
-\Title{Supplemental Figures}
+\section*{Supplemental Figures}
 \begin{figure}[htbp]
 \centering
 	\begin{overpic}[width=0.85\linewidth]{images/S1-01.jpg}
