--- a/SupplementalMovies.tex
+++ b/SupplementalMovies.tex
@@ -1,5 +1,5 @@
 \clearpage
-\Title{Supplemental Movies}
+\section*{Supplemental Movies}
 \TODO{i think should be in a separate word file}
 \begin{Itemize}
   \item Recording of the entire process of lateral root formation. Corresponds to Figure 1E (main text) \href{http://youtu.be/navcxqh7KCo}{\textcolor{blue}{[LINK]}}.
