--- a/SupplementalTables.tex
+++ b/SupplementalTables.tex
@@ -4,31 +4,31 @@
 \renewcommand{\thetable}{S\@arabic\c@table}
 \makeatother
 
-\Title{Supplemental Tables}
+\section*{Supplemental Tables}
 %\renewcommand*\listtablename{\vspace{-1.3cm}}
 %\listoftables
 %
 % more space between rows
-\renewcommand{\arraystretch}{1.1}
+%\renewcommand{\arraystretch}{1.1}
 %
-\begin{table}
-	\begin{center}
-		\begin{tabular}[htbp]{@{}lccccccc@{}}
-		\toprule
-		Event & \#120830 & \#121204 & \#121211 & \#130508 & \#130607 & Average & SD\\
-		\midrule
-		1\textsuperscript{st} anticlinal division & 10 & 11 & 11 & 9 & 15 & 11 & 2\\
-		1\textsuperscript{st} periclinal division & 22 & 25 & 30 & 16 & 28 & 24 & 5\\
-		2\textsuperscript{nd} periclinal division & 58 & 51 & 64 & 50 & 56 & 56 & 6\\
-%		1\textsuperscript{st} radial division & 36 & 62 & 106 & 55 & 97 & 71 & 39\\
-		Emergence & - & 155 & 208 & - & 173 & 179 & 27\\
-		\bottomrule
-		\end{tabular}
-	\end{center}
-	\caption[Number of cells in developmental events for all datasets.]{\textbf{Number of cells in developmental events for all datasets with average and standard deviation (SD) values.}
-	}
-	\label{tab:developmentalStages}
-\end{table}
+%\begin{table}
+%	\begin{center}
+%		\begin{tabular}[htbp]{@{}lccccccc@{}}
+%		\toprule
+%		Event & \#120830 & \#121204 & \#121211 & \#130508 & \#130607 & Average & SD\\
+%		\midrule
+%		1\textsuperscript{st} anticlinal division & 10 & 11 & 11 & 9 & 15 & 11 & 2\\
+%		1\textsuperscript{st} periclinal division & 22 & 25 & 30 & 16 & 28 & 24 & 5\\
+%		2\textsuperscript{nd} periclinal division & 58 & 51 & 64 & 50 & 56 & 56 & 6\\
+%%		1\textsuperscript{st} radial division & 36 & 62 & 106 & 55 & 97 & 71 & 39\\
+%		Emergence & - & 155 & 208 & - & 173 & 179 & 27\\
+%		\bottomrule
+%		\end{tabular}
+%	\end{center}
+%	\caption[Number of cells in developmental events for all datasets.]{\textbf{Number of cells in developmental events for all datasets with average and standard deviation (SD) values.}
+%	}
+%	\label{tab:developmentalStages}
+%\end{table}
 %
 \setlength{\tabcolsep}{0.2em}
 %
@@ -50,7 +50,6 @@
 %	}
 %	\label{tab:growthTensor}
 %\end{table}
-
 %\begin{table}
 %	\begin{center}
 %		\begin{tabular}[h]{@{}llc@{}}
@@ -68,7 +67,7 @@
 %	\label{tab:deformationParameters}
 %\end{table}
 %
-\clearpage
+%\clearpage
 %
 \begin{sidewaystable}
 	\miniscule
